# wow64-injector

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  clean.bat  test.bat  version.h.in
cmake/: clean-all.cmake
docs/: QUICKSTART.md  TECHNICAL.md  TROUBLESHOOTING.md
examples/: README.md  advanced_injection.lua  basic_injection.lua  stealth_injection.lua
include/: cli_parser.h  iat_hiding.h  logger.h  lua_injector.h  pattern_scanner.h  process_memory_handler.h  warden_detector.h
src/: iat_hiding.cpp  lua_injector.cpp  main.cpp  pattern_scanner.cpp  process_memory_handler.cpp  warden_detector.cpp
